; ModuleID = '/home/carl/AnghaBench/seafile/common/index/extr_index.c_make_cache_entry.c'
source_filename = "/home/carl/AnghaBench/seafile/common/index/extr_index.c_make_cache_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_entry = type { i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.cache_entry* @make_cache_entry(i32 %0, i8* %1, i8* %2, i8* %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.cache_entry*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca %struct.cache_entry*, align 8
  store i32 %0, i32* %8, align 4
  store i8* %1, i8** %9, align 8
  store i8* %2, i8** %10, align 8
  store i8* %3, i8** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %17 = load i8*, i8** %10, align 8
  %18 = call i32 @strlen(i8* %17)
  store i32 %18, i32* %15, align 4
  %19 = load i32, i32* %15, align 4
  %20 = call i32 @cache_entry_size(i32 %19)
  store i32 %20, i32* %14, align 4
  %21 = load i32, i32* %14, align 4
  %22 = call %struct.cache_entry* @calloc(i32 1, i32 %21)
  store %struct.cache_entry* %22, %struct.cache_entry** %16, align 8
  %23 = load %struct.cache_entry*, %struct.cache_entry** %16, align 8
  %24 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %23, i32 0, i32 3
  %25 = load i32, i32* %24, align 4
  %26 = load i8*, i8** %9, align 8
  %27 = call i32 @hashcpy(i32 %25, i8* %26)
  %28 = load %struct.cache_entry*, %struct.cache_entry** %16, align 8
  %29 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %28, i32 0, i32 2
  %30 = load i32, i32* %29, align 4
  %31 = load i8*, i8** %10, align 8
  %32 = load i32, i32* %15, align 4
  %33 = call i32 @memcpy(i32 %30, i8* %31, i32 %32)
  %34 = load i32, i32* %15, align 4
  %35 = load i32, i32* %12, align 4
  %36 = call i32 @create_ce_flags(i32 %34, i32 %35)
  %37 = load %struct.cache_entry*, %struct.cache_entry** %16, align 8
  %38 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %37, i32 0, i32 1
  store i32 %36, i32* %38, align 4
  %39 = load i32, i32* %8, align 4
  %40 = call i32 @create_ce_mode(i32 %39)
  %41 = load %struct.cache_entry*, %struct.cache_entry** %16, align 8
  %42 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %41, i32 0, i32 0
  store i32 %40, i32* %42, align 4
  %43 = load i32, i32* %13, align 4
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %45, label %49

45:                                               ; preds = %6
  %46 = load %struct.cache_entry*, %struct.cache_entry** %16, align 8
  %47 = load i8*, i8** %11, align 8
  %48 = call %struct.cache_entry* @refresh_cache_entry(%struct.cache_entry* %46, i8* %47)
  store %struct.cache_entry* %48, %struct.cache_entry** %7, align 8
  br label %51

49:                                               ; preds = %6
  %50 = load %struct.cache_entry*, %struct.cache_entry** %16, align 8
  store %struct.cache_entry* %50, %struct.cache_entry** %7, align 8
  br label %51

51:                                               ; preds = %49, %45
  %52 = load %struct.cache_entry*, %struct.cache_entry** %7, align 8
  ret %struct.cache_entry* %52
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @cache_entry_size(i32) #1

declare dso_local %struct.cache_entry* @calloc(i32, i32) #1

declare dso_local i32 @hashcpy(i32, i8*) #1

declare dso_local i32 @memcpy(i32, i8*, i32) #1

declare dso_local i32 @create_ce_flags(i32, i32) #1

declare dso_local i32 @create_ce_mode(i32) #1

declare dso_local %struct.cache_entry* @refresh_cache_entry(%struct.cache_entry*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
